# c0_compile

./: .gitignore  CMakeLists.txt  README.md  c0_compile_utils.hpp  compile.cpp  compile_plan.md  compile_test  gramma_log.txt  log.txt  make.sh  mips.asm  mips.txt  pcode.txt  run.sh  se.cpp  semantic_error.txt  symbol_log.txt
config/: .tmux.conf  .vimrc
include/: c0_compile.hpp  c0_compile_gramma.hpp  c0_compile_gramma_analysis.hpp  c0_compile_lexical_analysis.hpp  c0_compile_mips.hpp  c0_compile_pcode.hpp  c0_compile_symbol.hpp  c0_compile_tools.hpp  c0_compile_utils.hpp
src/: c0_compile_generate.cpp  c0_compile_gramma_analysis.cpp  c0_compile_lexical_analysis.cpp  c0_compile_mips.cpp  c0_compile_pcode.cpp  c0_compile_semantic_analysis.cpp  c0_compile_symbol.cpp  c0_compile_tools.cpp  main.cpp
test/: array_index.cpp  constant_declaration.cpp  expression.cpp  optimization.c  optimization_run.c  test_generate.cpp  test_gramma.cpp  test_rhx.cpp  test_source_code.cpp  test_symbol.cpp  variable_definition.cpp
test_error/: func_match.cpp  gramma_error.cpp  id.cpp  keyword.cpp  type_match.cpp
test_func/: test_argument.cpp  test_gramma.cpp  test_inline.cpp
